force-app/main/default/objects/Zco_WhatsApp_Inbound__e/Zco_WhatsApp_Inbound__e.object-meta.xml
<CustomObject>
    <description>Workbook-defined whatsapp inbound platform event.</description>
    <label>Zco WhatsApp Inbound</label>
    <pluralLabel>Zco WhatsApp Inbound Events</pluralLabel>
</CustomObject>