force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/Button_Payload__c.field-meta.xml
<CustomField>
    <fullName>Button_Payload__c</fullName>
    <label>Button Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>