force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/Context_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Message_Id__c</fullName>
    <label>Context Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>