force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>40</length>
    <type>Text</type>
</CustomField>