force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/Media_Id__c.field-meta.xml
<CustomField>
    <fullName>Media_Id__c</fullName>
    <label>Media ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>