force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/Provider_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Message_Id__c</fullName>
    <label>Provider Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>