force-app/main/default/objects/Zco_WhatsApp_Inbound__e/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>